--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ Flask==0.10.1
 Jinja2==2.7.3
 MarkupSafe==0.23
 Werkzeug==0.10.1
+gunicorn==19.3.0
 itsdangerous==0.24
 python-dateutil==2.4.1
 requests==2.6.0
